--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = nodemcu
 framework = arduino
-lib_deps = mobizt/Firebase ESP8266 Client@^3.0.1
+lib_deps = 
+	mobizt/Firebase ESP8266 Client@^3.0.1
+	arduino-libraries/NTPClient@^3.1.0
